Fix overflow-x when expanding the search on mobile

--- a/src/components/common/Navbar/navbar.scss
+++ b/src/components/common/Navbar/navbar.scss
@@ -120,6 +120,7 @@
 .navbar__header {
   padding-top: var(--fs-spacing-1);
   padding-bottom: var(--fs-spacing-2);
+  overflow-x: clip;
 
   @include media(">=notebook") {
     padding-top: var(--fs-spacing-1);
